feat: add cursor pagination, update limits, optimize config, and remove offline mode