@@ -2,98 +2,108 @@ package com.fbscraper.config;
 
 import java.io.FileInputStream;
 import java.io.IOException;
-import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Properties;
 
 /**
- * Immutable application configuration record.
+ * Immutable application configuration record for the Facebook Scraper.
  * <p>
- * Encapsulates Facebook Graph API credentials, versioning, mock offline mode,
- * and sentiment threshold thresholds.
+ * Loaded strictly from a {@code config.properties} file without classpath or environment variable lookups.
  *
  * @param pageId            Facebook Page ID to scrape
  * @param accessToken       Facebook Page/User Access Token with required permissions
- * @param apiVersion        Facebook Graph API version (e.g. "v26.0")
- * @param offlineMode       true to use local mock data instead of live network calls
- * @param negativeThreshold Compound score threshold below which comments are flagged as negative
+ * @param apiVersion        Facebook Graph API version (default "v26.0")
+ * @param feedLimit         Number of posts to fetch per page (default 100, Meta max)
+ * @param commentLimit      Number of comments to fetch per post (default 100, Meta max)
+ * @param maxPages          Maximum number of feed pages to paginate through (default 5; 0 for unlimited)
+ * @param negativeThreshold Compound score threshold below which comments are flagged as negative (default -0.05)
  */
 public record AppConfig(
         String pageId,
         String accessToken,
         String apiVersion,
-        boolean offlineMode,
+        int feedLimit,
+        int commentLimit,
+        int maxPages,
         double negativeThreshold
 ) {
     public static final String DEFAULT_API_VERSION = "v26.0";
-    public static final boolean DEFAULT_OFFLINE_MODE = true;
+    public static final int DEFAULT_FEED_LIMIT = 100;
+    public static final int DEFAULT_COMMENT_LIMIT = 100;
+    public static final int DEFAULT_MAX_PAGES = 5;
     public static final double DEFAULT_NEGATIVE_THRESHOLD = -0.05;
 
     /**
-     * Loads configuration from local config.properties, classpath, or environment variables.
+     * Loads configuration strictly from a {@code config.properties} file.
+     * Looks in the current working directory, with a fallback to {@code src/main/resources/config.properties}.
      *
      * @return an initialized {@link AppConfig} instance
+     * @throws IllegalStateException if the config.properties file cannot be found
      */
     public static AppConfig load() {
-        Properties props = new Properties();
+        Path configFile = Path.of("config.properties");
+        if (!Files.exists(configFile)) {
+            configFile = Path.of("src/main/resources/config.properties");
+        }
 
-        // 1. Try to load config.properties from working directory
-        Path localFile = Path.of("config.properties");
-        if (Files.exists(localFile)) {
-            try (InputStream in = new FileInputStream(localFile.toFile())) {
-                props.load(in);
-            } catch (IOException ignored) {
-            }
-        } else {
-            // 2. Fall back to classpath config.properties if present
-            try (InputStream in = AppConfig.class.getClassLoader().getResourceAsStream("config.properties")) {
-                if (in != null) {
-                    props.load(in);
-                }
-            } catch (IOException ignored) {
-            }
+        if (!Files.exists(configFile)) {
+            throw new IllegalStateException(
+                    "Configuration file not found! Expected 'config.properties' in working directory or 'src/main/resources/config.properties'. " +
+                    "Please create it based on 'config.properties.template'."
+            );
+        }
+
+        Properties props = new Properties();
+        try (var in = new FileInputStream(configFile.toFile())) {
+            props.load(in);
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to read config.properties from " + configFile.toAbsolutePath() + ": " + e.getMessage(), e);
         }
 
         return fromProperties(props);
     }
 
     /**
-     * Resolves an {@link AppConfig} instance by reading from the supplied properties
-     * with fallback to system environment variables and built-in defaults.
+     * Constructs an {@link AppConfig} directly from a {@link Properties} object.
      *
-     * @param props the loaded {@link Properties} object
+     * @param props the loaded properties
      * @return a configured {@link AppConfig} instance
      */
     public static AppConfig fromProperties(Properties props) {
-        String pageId = getPropOrEnv(props, "fb.page.id", "FB_PAGE_ID", "");
-        String accessToken = getPropOrEnv(props, "fb.access.token", "FB_ACCESS_TOKEN", "");
-        String apiVersion = getPropOrEnv(props, "fb.api.version", "FB_API_VERSION", DEFAULT_API_VERSION);
+        String pageId = props.getProperty("fb.page.id", "").trim();
+        String accessToken = props.getProperty("fb.access.token", "").trim();
 
-        String offlineStr = getPropOrEnv(props, "app.offline.mode", "APP_OFFLINE_MODE", String.valueOf(DEFAULT_OFFLINE_MODE));
-        boolean offlineMode = Boolean.parseBoolean(offlineStr);
+        String apiVersion = props.getProperty("fb.api.version", DEFAULT_API_VERSION).trim();
+        if (apiVersion.isEmpty()) {
+            apiVersion = DEFAULT_API_VERSION;
+        }
 
-        String thresholdStr = getPropOrEnv(props, "app.negative.threshold", "APP_NEGATIVE_THRESHOLD", String.valueOf(DEFAULT_NEGATIVE_THRESHOLD));
-        double negativeThreshold = parseDoubleOrDefault(thresholdStr, DEFAULT_NEGATIVE_THRESHOLD);
+        int feedLimit = parseIntOrDefault(props.getProperty("fb.feed.limit"), DEFAULT_FEED_LIMIT);
+        int commentLimit = parseIntOrDefault(props.getProperty("fb.comment.limit"), DEFAULT_COMMENT_LIMIT);
+        int maxPages = parseIntOrDefault(props.getProperty("fb.max.pages"), DEFAULT_MAX_PAGES);
+        double negativeThreshold = parseDoubleOrDefault(props.getProperty("app.negative.threshold"), DEFAULT_NEGATIVE_THRESHOLD);
 
-        return new AppConfig(pageId, accessToken, apiVersion, offlineMode, negativeThreshold);
+        return new AppConfig(pageId, accessToken, apiVersion, feedLimit, commentLimit, maxPages, negativeThreshold);
     }
 
-    private static String getPropOrEnv(Properties props, String propKey, String envKey, String defaultVal) {
-        String val = props.getProperty(propKey);
-        if (val != null && !val.trim().isEmpty()) {
-            return val.trim();
+    private static int parseIntOrDefault(String str, int defaultVal) {
+        if (str == null || str.isBlank()) {
+            return defaultVal;
         }
-        String env = System.getenv(envKey);
-        if (env != null && !env.trim().isEmpty()) {
-            return env.trim();
+        try {
+            return Integer.parseInt(str.trim());
+        } catch (NumberFormatException e) {
+            return defaultVal;
         }
-        return defaultVal;
     }
 
     private static double parseDoubleOrDefault(String str, double defaultVal) {
+        if (str == null || str.isBlank()) {
+            return defaultVal;
+        }
         try {
-            return Double.parseDouble(str);
+            return Double.parseDouble(str.trim());
         } catch (NumberFormatException e) {
             return defaultVal;
         }
